

Transcripts -  Many NPR API stories contain transcripts from the program segment they are referencing.  Transcripts are stored in a separate API at NPR, but now when a story you have pulled from the NPR API has transcripts that transcript data will be appended to the body of your post.

Custom Post Types -  Now the NPR API Plug-in can use your custom post types.  We will also create a custom post type for stories pulled from the NPR API.  From the NPR API settings page (wp-admin/options-general.php?page=ds_npr_api) you can now select which post type you would like the plug-in to pull content into.  For your convenience we also created the custom post type name npr_story_post.  You do not have to use it.  You can also select which post type you will push to the NPR API.  If neither of these options are set, we will use the post, post type.

Mapping Push Fields -  You can now map any custom field to Title, Body or Byline for posts being pushed to the NPR API.  From the NPR API Field Mapping page (wp-admin/options-general.php?page=ds_npr_api_push_mapping) you can select which meta fields are used from your selected post type for push, to be sent to the API for Title, Body and Byline.  You can also leave this with the default setting, or not check the "Use Custom Settings" checkbox, and the plug-in will use the default WordPress fields.

Audio -  We are now going to be saving a link to .m3u files for stories with audio.  It seems that not all .mp3 files are always available, but more often than not the .m3u file is available.  If there are more than one .mp3 or .m3u file for one story, they will be included in a coma separated list.  M3U files will be stored in the meta field named npr_audio_m3u.
